+ Added Jogos Nhai banner
+ Added new Hardhome
+ Added skirling pass as a hidden road in mountains
+ Added villages and houses for wildling, thenn and north hillmen
+ Added random corn plants spawning
+ Added random structures
+ Added Tugar Khan
+ Added Hojtbaatar waypoint
+ Added Jogos Nhai armor
+ Added Tugar Khan achievement
+ Added dark variants of scrap trader and thief

* Improved essos structures
* Improved roads
* Improved guards: sync between Essos and Westeros
* Improved Yi Ti Roads
* Improved almost all biomes
* Improved summer islands' strscans
* Improved white walkers attack AI
* Improved massy and cracklaw
* Improved forests and mountains
* Improved spawning
* Improved Bu Gai Quest
* Improved structures generator
* Improved wall gate

* Optimized iron bank code

* Fixed exactly 100 bugs in gameplay. Thanks to VVVIP2 for this challenge.
* Fixed bug with th map screen sometimes opening onto empty sea at integer max value coordinates
* Fixed bug with FT in bed
* Fixed bug with sothoryos sarbacaners
* Fixed bug with birds
* Fixed bug with capes and shields
* Fixed bug with unsmeltery-NEI compatibility
* Fixed bug with riders without horse armor
* Fixed bug with horses in houses
* Fixed bug with Twins
* Fixed bug with crashing removed biomes
* Fixed bug with Yi Ti border
* Fixed bug with attack
* Fixed bug with village spawning
* Fixed bug with scorpion drop
* Fixed bug with iron bank
* Fixed bug with alchemist skin
* Fixed bug with speech and chat
* Fixed bug with structures of Mossovy
* Fixed bug with sandstone in Westeros
* Fixed bug with Daenerys Targaryen spawning
* Fixed bug with Yi Ti cities
* Fixed bug with valyrian smelting

- Removed HD banners
- Removed Skirling pass as a biome
- Removed corn fields
- Removed Kitra's achievement
- Removed Kitra
- Removed Kitra's Camp waypoint
- Removed 28 technical biomes
- Removed camps and tents of wildling, thenn and north hillmen

>>VERSION 17.5