@@ -10,8 +10,8 @@ import got.common.world.feature.GOTTreeType;
 import got.common.world.map.GOTWaypoint.Region;
 import got.common.world.spawning.GOTBiomeSpawnList;
 import got.common.world.spawning.GOTBiomeSpawnList.SpawnListContainer;
-import got.common.world.structure.other.GOTStructureStoneRuin;
-import got.common.world.structure.westeros.hillmen.*;
+import got.common.world.structure.other.*;
+import got.common.world.structure.westeros.hillmen.GOTStructureHillmanVillage;
 import net.minecraft.world.biome.BiomeGenBase;
 
 public class GOTBiomeArrynMountainsFoothills extends GOTBiome {
@@ -50,7 +50,11 @@ public class GOTBiomeArrynMountainsFoothills extends GOTBiome {
 		npcSpawnList.newFactionList(0).add(c3);
 
 		decorator.addVillage(new GOTStructureHillmanVillage(this, 1.0f));
-		decorator.addRandomStructure(new GOTStructureHillmanFort(false), 500);
+
+		decorator.addRandomStructure(new GOTStructureSmallStoneRuin(false), 500);
+		decorator.addRandomStructure(new GOTStructureRuinedHouse(false), 2000);
+		decorator.addRandomStructure(new GOTStructureBurntHouse(false), 2000);
+		decorator.addRandomStructure(new GOTStructureRottenHouse(false), 4000);
 		decorator.addRandomStructure(new GOTStructureStoneRuin.STONE(1, 4), 400);
 
 	}
