@@ -300,7 +300,7 @@ entity.got.HillmenAxeThrower.name=Горец-топорометатель
 entity.got.HillmenBannerBearer.name=Горец-знаменосец
 entity.got.HillmenBartender.name=Горец-трактирщик
 entity.got.HillmenBerserker.name=Горец-берсерк
-entity.got.HillmenWarlord.name=Вождь горных кланов
+entity.got.HillmenWarlord.name=Вождь горцев
 entity.got.HillmenWarrior.name=Горец-воин
 entity.got.HizdahrZoLoraq.name=Хиздар зо Лорак
 entity.got.Hodor.name=Ходор
@@ -1872,7 +1872,7 @@ got.container.crafting.dothraki=Верстак дотракийцев
 got.container.crafting.dragonstone=Верстак Драконьего Камня
 got.container.crafting.ghiscar=Верстак Гискара
 got.container.crafting.gift=Верстак Ночного Дозора
-got.container.crafting.hillmen=Верстак горных кланов
+got.container.crafting.hillmen=Верстак горцев
 got.container.crafting.ibben=Верстак Иббена
 got.container.crafting.ironborn=Верстак Железных островов
 got.container.crafting.jogos=Верстак Джогос Нхая
@@ -2138,19 +2138,19 @@ got.faction.GHISCAR.rank.warrior=Защитник
 got.faction.GHISCAR.subtitle=Залив работорговцев
 got.faction.HILL_TRIBES.entity=Горцы
 got.faction.HILL_TRIBES.name=Горные кланы
-got.faction.HILL_TRIBES.rank.avenger.f=Военачальник горных кланов
+got.faction.HILL_TRIBES.rank.avenger.f=Военачальник горцев
 got.faction.HILL_TRIBES.rank.avenger=Военачальник
-got.faction.HILL_TRIBES.rank.bearer.f=Берсерк горных кланов
+got.faction.HILL_TRIBES.rank.bearer.f=Горец-берсерк
 got.faction.HILL_TRIBES.rank.bearer=Берсерк
-got.faction.HILL_TRIBES.rank.chieftain.f=Вождь горных кланов
+got.faction.HILL_TRIBES.rank.chieftain.f=Вождь горцев
 got.faction.HILL_TRIBES.rank.chieftain=Вождь
-got.faction.HILL_TRIBES.rank.guest.f=Гость горных кланов
+got.faction.HILL_TRIBES.rank.guest.f=Гость горцев
 got.faction.HILL_TRIBES.rank.guest=Гость
-got.faction.HILL_TRIBES.rank.kinsman.f=Друг горных кланов
+got.faction.HILL_TRIBES.rank.kinsman.f=Друг горцев
 got.faction.HILL_TRIBES.rank.kinsman=Друг
-got.faction.HILL_TRIBES.rank.warlord.f=Полководец горных кланов
+got.faction.HILL_TRIBES.rank.warlord.f=Полководец горцев
 got.faction.HILL_TRIBES.rank.warlord=Полководец
-got.faction.HILL_TRIBES.rank.warrior.f=Воин горных кланов
+got.faction.HILL_TRIBES.rank.warrior.f=Горец-воин
 got.faction.HILL_TRIBES.rank.warrior=Воин
 got.faction.HILL_TRIBES.subtitle=Горцы долины Аррен
 got.faction.HOSTILE.name=Враждебная
@@ -3014,7 +3014,7 @@ got.shields.DRAGONSTONE.name=Щит Драконьего Камня
 got.shields.GHISCAR.name=Щит Гискара
 got.shields.GOLDENCOMPANY.desc=Награда за найм десяти золотых мечей
 got.shields.GOLDENCOMPANY.name=Щит золотых мечей
-got.shields.HILLMEN.name=Щит горных кланов
+got.shields.HILLMEN.name=Щит горцев
 got.shields.IRONBORN.name=Щит Железных островов
 got.shields.LORATH.name=Щит Лората
 got.shields.LYS.name=Щит Лиса
@@ -3163,10 +3163,10 @@ got.structure.GiftVillageLight.name=Деревенский фонарь Ночн
 got.structure.GiftWatchtower.name=Сторожевая башня Ночного Дозора
 got.structure.GoldenCamp.name=Лагерь Золотых Мечей
 got.structure.HillmanVillage.name=Деревня горцев
-got.structure.HillmenCampfire.name=Лагерь горных кланов
-got.structure.HillmenHillFort.name=Форт горных кланов
-got.structure.HillmenHouse.name=Дом горных кланов
-got.structure.HillmenTavern.name=Таверна горных кланов
+got.structure.HillmenCampfire.name=Лагерь горцев
+got.structure.HillmenHillFort.name=Форт горцев
+got.structure.HillmenHouse.name=Дом горцев
+got.structure.HillmenTavern.name=Таверна горцев
 got.structure.HorthHillmanCamp.name=Лагерь горцев Севера
 got.structure.IbbenBarn.name=Хлев Иббена
 got.structure.IbbenFortVillage.name=Городище Иббена
@@ -5261,7 +5261,7 @@ item.got:chestnutRoast.name=Печёный каштан
 item.got:chisel.name=Долото
 item.got:clayMug.name=Необожженая кружка
 item.got:clayPlate.name=Необожженая тарелка
-item.got:club.name=Дубина горных кланов
+item.got:club.name=Дубина
 item.got:cobaltBlue.name=Синий кобальт
 item.got:coin.1.name=Медный пенни
 item.got:coin.1024.name=Серебряная луна
@@ -5391,10 +5391,10 @@ item.got:handSilver.name=Знак Десницы (2)
 item.got:harpy.name=Гарпия
 item.got:hearteater.name=Пожиратель сердец
 item.got:heartsbane.name=Губитель Сердец
-item.got:hillmenBoots.name=Ботинки горных кланов
-item.got:hillmenChestplate.name=Нагрудник горных кланов
-item.got:hillmenHelmet.name=Шлем горных кланов
-item.got:hillmenLeggings.name=Поножи горных кланов
+item.got:hillmenBoots.name=Ботинки горцев
+item.got:hillmenChestplate.name=Нагрудник горцев
+item.got:hillmenHelmet.name=Шлем горцев
+item.got:hillmenLeggings.name=Поножи горцев
 item.got:honor.name=Честь
 item.got:horn.name=Рог
 item.got:ibbenBoots.name=Ботинки Иббена
@@ -5737,7 +5737,7 @@ item.got:tidewings.name=Крылья прилива
 item.got:tinIngot.name=Слиток олова
 item.got:topaz.name=Топаз
 item.got:tormundSword.name=Меч Тормунда
-item.got:trident.name=Трезубец горных кланов
+item.got:trident.name=Трезубец
 item.got:truth.name=Истина
 item.got:trystaneSword.name=Меч Тристана Мартелла
 item.got:tugarKhanSword.name=Сабля Тугархана
@@ -6647,7 +6647,7 @@ tile.got:tableDothraki.name=Верстак дотракийцев
 tile.got:tableDragonstone.name=Верстак Драконьего Камня
 tile.got:tableGhiscar.name=Верстак Гискара
 tile.got:tableGift.name=Верстак Ночного Дозора
-tile.got:tableHillTribes.name=Верстак горных кланов
+tile.got:tableHillTribes.name=Верстак горцев
 tile.got:tableIbben.name=Верстак Иббена
 tile.got:tableIronborn.name=Верстак Железных островов
 tile.got:tableJogos.name=Верстак Джогос Нхая
